--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
             <div class="cell date-off"><span class="date value">3</span><br/><span class="in value">-- --</span><br/><span class="out value">-- --</span></div>
           </div>
           <div class="row last">
-            <div class="cell date-off"><span class="date value">4</span><br/><span class="in value">-- --</span><br/><span class="out value">-- --</span></div>
+            <div class="cell date-off bottom-left"><span class="date value">4</span><br/><span class="in value">-- --</span><br/><span class="out value">-- --</span></div>
             <div class="cell date-off"><span class="date value">5</span><br/><span class="in value">-- --</span><br/><span class="out value">-- --</span></div>
             <div class="cell date-off"><span class="date value">6</span><br/><span class="in value">-- --</span><br/><span class="out value">-- --</span></div>
             <div class="cell date-off"><span class="date value">7</span><br/><span class="in value">-- --</span><br/><span class="out value">-- --</span></div>
             <div class="cell date-off"><span class="date value">8</span><br/><span class="in value">-- --</span><br/><span class="out value">-- --</span></div>
             <div class="cell date-off"><span class="date value">9</span><br/><span class="in value">-- --</span><br/><span class="out value">-- --</span></div>
-            <div class="cell date-off"><span class="date value">10</span><br/><span class="in value">-- --</span><br/><span class="out value">-- --</span></div>
+            <div class="cell date-off bottom-right"><span class="date value">10</span><br/><span class="in value">-- --</span><br/><span class="out value">-- --</span></div>
           </div>
         </div>
 
