--- a/index.html
+++ b/index.html
@@ -2,13 +2,22 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <title>Timesheet</title>
+  <title>Timind HRMS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/common.css">
+  <meta property="og:title" content="Timind HRMS" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://linhps.github.io/HRMS" />
+  <meta property="og:image" content="image/favicon.png" />
+  <meta property="og:description" content="Timind HRMS" />
+  <link rel="icon" href="image/favicon.png" type="image/gif" />
 <body>
+  <img class="sun" src="image/sun.png"/>
+  <img class="mars" src="image/mars.png"/>
+
   <div class="layout">
     <div class="left-col">
       <div class="wrapper">
